[tool.poetry]
name = "interview-helper-server"
version = "0.1.0"
description = ""
authors = ["twotwobread"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.8.0"
flake8 = "^7.0.0"
black = "^24.2.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlmodel = "^0.0.16"
pytest = "^8.0.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
